Code Optimization on SpringBoot 3.3.4